--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -86,8 +86,7 @@ jobs:
           wasm-pack build \
             --target ${{ matrix.target }} \
             --out-dir pkg-${{ matrix.target }} \
-            --features wasm \
-            --release
+            --features wasm 
 
       - name: Upload WASM package
         uses: actions/upload-artifact@v4
